--- a/Music Streaming/demo/demo/src/main/resources/templates/user/home.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/home.html
@@ -2,10 +2,11 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link th:href="@{/css/page.css}" rel="stylesheet"/>
 </head>
 <body>
-
-    <h1>Recommend</h1>
+    
+    <h1><center>Recommend</center></h1>
 
     <h2>Recommend Playlist</h2>
         <div id="recommendPlaylist">
