--- a/Music Streaming/demo/demo/src/main/resources/static/css/indexstyles.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/indexstyles.css
@@ -437,7 +437,11 @@ div.scrollmenu {
   display: inline-flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   padding: 30px;
   }
   
+  .buttons div{
+    margin: 20px;
+  }
   
