--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -75,20 +75,13 @@
                                 <audio controls id="audio">
                                     <source src="" type="audio/wav">
                                 </audio>
+                                    <div class="buttons">
+                                        <div id="prevSong"></div>
+                                        <div id="likeButton"></div>
+                                        <div id="nextSong"></div>
+                                    </div>
+                                <div id="a2pl"></div>
                             </div>
-                        
-                            <div class="buttons">
-                                <div id="prevSong">
-                                     <i class="fa fa-step-backward fa-2x"></i>
-                                 </div>
-                                 <div id="likeButton">
-                                     <i class="fa fa-play-circle fa-5x"></i>
-                                 </div>
-                                 <div id="nextSong">
-                                     <i class="fa fa-step-forward fa-2x"></i>
-                                 </div>
-                            </div>
-                            <div id="a2pl"></div>
                         </div>
                     </div>
                </div>
