--- a/Music Streaming/demo/demo/src/main/resources/static/css/indexstyles.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/indexstyles.css
@@ -333,39 +333,38 @@ div.scrollmenu {
 /* ////////////////////////////////////////////////////////// */
 
 .popup {
-  position: relative;
+  position: center;
   display: inline-block;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  width: 200px;
+  margin: auto auto;
 }
 
 .popup .popuptext {
   visibility: hidden;
-  width: 160px;
   background-color: #555;
   color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0;
-  position: absolute;
+  position: center;
   z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
+  width: 200px;
+  margin: auto auto;
 }
 
 .popup .popuptext::after {
   content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
+  position: center;
   border-width: 5px;
   border-style: solid;
   border-color: #555 transparent transparent transparent;
+  width: 200px;
+  margin: auto auto;
 }
 
 .popup .show {
