--- a/Music Streaming/demo/demo/src/main/resources/static/css/indexstyles.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/indexstyles.css
@@ -172,7 +172,9 @@
 }
 .vertical-menu {
     width: 250px;
-    overflow:visible;
+    min-height: auto;
+    max-height: 50vh;
+    overflow: scroll;
 }
     .vertical-menu a {
         background-color: #eee;
@@ -234,12 +236,17 @@ div.scrollmenu {
         overflow: auto;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
+        width: 250px;
+        min-height: auto;
+        max-height: 50vh;
+        overflow: scroll;
     }
     .dropdown-content a {
         color: black;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        
     }
     .dropdown a:hover {
         background-color: #ddd;
