--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -70,7 +70,7 @@
                     <div class="player">
                         <div class="wrapper">
                             <div class="details">
-                                <div class="track-art"> <img src="media/playlist.jpg"></div>
+                                <div class="track-art"> <img src="media/CD.png"></div>
                                 <div class="track-name" id="songName">Track Name</div>
                                 <audio controls id="audio">
                                     <source src="" type="audio/wav">
