--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -2,14 +2,17 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <link th:href="@{/css/page.css}" rel="stylesheet"/>
 </head>
 <body>
 
-    <h1>Search</h1>
+    <h1><i class="fa-sharp fa-solid fa-magnifying-glass"></i>Search</h1>
 
-    <div>
-        <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off" placeholder="Search Here (Song, !Genre, @Artist, $Year)">
+    <div class="container">
+        <form action="" class="search-bar">
+            <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off" placeholder="Search Here (Song, !Genre, @Artist, $Year)">
+        </form>
     </div>
 
     <div id="searchResult">
