--- a/Music Streaming/demo/demo/src/main/resources/templates/user/login.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/login.html
@@ -4,17 +4,158 @@
     <meta charset="UTF-8" />
 </head>
 <body>
+    <title>Music Streaming</title>
+    <h1>Music Streaming</h1>
+    <h2>Sign In</h2>
 
-    <h1>Sign In</h1>
+    <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
 
-    <div th:if="${param.error}">Invalid email or password.</div>
-    <div th:if="${param.logout}">You have been logged out.</div>
+    <div class="container">
+    <div th:if="${param.error}"><span>Invalid email or password.</span></div>
+    <div th:if="${param.logout}"><span>You have been logged out.</span> </div>
     <form th:action="@{/login}" method="post">
         <div><label>Email:<input type="text" name="username"/> </label></div>
         <div><label>Password:<input type="password" name="password"/> </label></div>
-        <div><input type="submit" value="Sign In"/></div>
+        <div class="singin"><input type="submit" value="Sign In"/></div>
     </form>
     <a th:href="@{/register}"><button>Sign Up</button></a>
+    </div>
+
+    <!-- style -->
+    <style media="screen">
+        *,
+    *:before,
+    *:after{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    span {
+        color: #FF0000;
+        font-weight: bold;
+    }
+    h1 {
+        font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+        color: #e5e5e5;
+        text-align: center;
+        margin-top: 60px;    
+    }
+    h2 {
+        font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+        color: #e5e5e5;
+        text-align: center;
+        margin-top: 30px;
+    }
+    body{
+        background-color: #000000;
+    }
+    .background{
+        width: 430px;
+        height: 520px;
+        position: absolute;
+        transform: translate(-50%,-50%);
+        left: 50%;
+        top: 50%;
+    }
+    .background .shape{
+        height: 200px;
+        width: 200px;
+        position: absolute;
+        border-radius: 50%;
+    }
+    .shape:first-child{
+        background: linear-gradient(
+            #FF3399,
+            #FF99CC
+        );
+        left: -80px;
+        top: -80px;
+    }
+    .shape:last-child{
+        background: linear-gradient(
+            to right,
+            #ff512f,
+            #f09819
+        );
+        right: -30px;
+        bottom: -80px;
+    }
+    .container{
+        height: 540px;
+        width: 400px;
+        background-color: rgba(255,255,255,0.13);
+        position: absolute;
+        transform: translate(-50%,-50%);
+        top: 50%;
+        left: 50%;
+        border-radius: 10px;
+        backdrop-filter: blur(10px);
+        border: 2px solid rgba(255,255,255,0.1);
+        box-shadow: 0 0 40px rgba(8,7,16,0.6);
+        padding: 50px 35px;
+    }
+    form *{
+        font-family: 'Poppins',sans-serif;
+        color: #ffffff;
+        letter-spacing: 0.5px;
+        outline: none;
+        border: none;
+    }
+    form h3{
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 42px;
+        text-align: center;
+    }
+    
+    label{
+        display: block;
+        margin-top: 30px;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    input{
+        display: block;
+        height: 50px;
+        width: 100%;
+        background-color: rgba(255,255,255,0.07);
+        border-radius: 3px;
+        padding: 0 10px;
+        margin-top: 8px;
+        font-size: 14px;
+        font-weight: 300;
+    }
+    ::placeholder{
+        color: #e5e5e5;
+    }
+    button{
+        margin-top: 50px;
+        width: 100%;
+        background-color: #ffffff;
+        color: #080710;
+        padding: 15px 0;
+        font-size: 18px;
+        font-weight: 600;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .singin input{
+        margin-top: 50px;
+        width: 100%;
+        background-color: #FF3399;
+        color: #ffffff;
+        padding: 15px 0;
+        font-size: 18px;
+        font-weight: 600;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+</style>
 
 </body>
 </html>
+
