--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -6,8 +6,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link th:href="@{/css/indexstyles.css}" rel="stylesheet">
     <script th:src="@{/js/index.js}"></script>
+    <link rel="icon" type="image/png" th:href="@{/media/logo2.png}">
 </head>
 <body>
+    <title>Music Streaming</title>
        <section class="main">
          <div class="btn btn-hamburger">
                    <i class="fas fa-bars"></i>
