--- a/Music Streaming/demo/demo/src/main/resources/templates/user/login.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/login.html
@@ -2,9 +2,10 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" th:href="@{/media/logo2.png}">
 </head>
 <body>
-    <title>Music Streaming</title>
+    <title>Music Streaming Login</title>
     <h1>Music Streaming</h1>
     <h2>Sign In</h2>
 
