--- a/Music Streaming/demo/demo/src/main/resources/templates/user/register-success.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/register-success.html
@@ -3,9 +3,10 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" th:href="@{/media/logo2.png}">
 </head>
 <body>
-
+ <title>Music Streaming Registration Successfully</title>
     <div class="card">
         <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
           <i class="checkmark">✓</i>
