--- a/Music Streaming/demo/demo/src/main/resources/templates/user/register.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/register.html
@@ -2,8 +2,10 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" th:href="@{/media/logo2.png}">
 </head>
 <body>
+    <title>Music Streaming Registration</title>
     <h1>Music Streaming</h1>
     <h2>Registration - Sign Up</h2>
 
